--- a/Pages/Rep_UserReport.cshtml
+++ b/Pages/Rep_UserReport.cshtml
@@ -77,17 +77,17 @@
 
             <a href="Rep_Distribution" class="btn btn-outline-gray-600 d-inline-flex align-items-center  report mx-2">@Model.lblDistributedMaterials</a>
             <a href="Rep_Inventory" class="btn btn-outline-gray-600 d-inline-flex align-items-center  report mx-2">@Model.lblInventory</a>
-            <a href="Rep_HazardMaterial" class="btn btn-gray-600 d-inline-flex align-items-center  report mx-2">@Model.lblHazardousMaterials</a>
+            <a href="Rep_HazardMaterial" class="btn btn-outline-gray-600 d-inline-flex align-items-center  report mx-2">@Model.lblHazardousMaterials</a>
             <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblDamagedItems</a>
             @if (Model.CanManageUsers)
             {
                 <a href="Rep_UserActivity"
-                   class="btn btn-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserActivity</a>
+                   class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserActivity</a>
 
 
 
                 <a href="Rep_UserReport"
-                   class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserReport</a>
+                   class="btn btn-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserReport</a>
             }
 
         </div>
